Add deployment checklist and guide 🚀📋

--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup-env": "./scripts/setup-env.sh",
+    "setup-db": "npx prisma generate && npx prisma db push",
+    "db:studio": "npx prisma studio",
+    "db:reset": "npx prisma db push --force-reset",
+    "deploy": "vercel --prod",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -22,6 +28,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
