--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^9.5.0",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "jsdom": "^26.1.0",
