--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
+    "node-poppler": "^8.0.1",
+    "pdf-parse": "^1.1.1",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -73,6 +75,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/jszip": "^3.4.0",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
