--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/jspdf": "^1.3.3",
     "@types/multer": "^1.4.12",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/uuid": "^10.0.0",
     "ai": "^4.3.16",
     "bcryptjs": "^3.0.2",
@@ -45,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^9.5.0",
+    "form-data": "^4.0.2",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "jsdom": "^26.1.0",
@@ -55,8 +57,13 @@
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
+    "node-fetch": "^3.3.2",
     "node-poppler": "^8.0.1",
+    "openai": "^4.103.0",
     "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.1",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^4.10.38",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
