Enhance Resume Optimization Features and Subscription Tiers 🎉✨
### Summary of Changes
- **Added Resume Optimization Model**: Introduced a new `ResumeOptimization` model in the database to store optimized resumes and related data.
- **Updated Subscription Tiers**: Changed subscription tiers from `PRO` and `ENTERPRISE` to `PLUS` and `PREMIUM`, reflecting new pricing and feature structures.
- **Enhanced API Endpoints**: Updated API routes to support resume optimization functionalities and adjusted user plan management scripts accordingly.
- **Improved Frontend Components**: Updated UI components to reflect new subscription tiers and added loading states for resume optimization processes.

### Impact
These changes improve the resume optimization capabilities and align subscription offerings with user needs, enhancing overall user experience. 🚀

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^4.10.38",
     "prisma": "^6.8.2",
+    "puppeteer": "^24.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
