--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "stripe": "^18.1.1",
     "tailwind-merge": "^3.3.0",
