--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "db:studio": "npx prisma studio",
     "db:reset": "npx prisma db push --force-reset",
     "deploy": "vercel --prod",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "index-docs": "node scripts/index-documentation.js"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
     "@anthropic-ai/sdk": "^0.52.0",
     "@auth/prisma-adapter": "^2.9.1",
+    "@pinecone-database/pinecone": "^6.0.1",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -45,6 +47,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^9.5.0",
+    "dotenv": "^16.5.0",
     "form-data": "^4.0.2",
     "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
