--- a/vercel.json
+++ b/vercel.json
@@ -5,31 +5,31 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "env": {
-    "NEXTAUTH_URL": "https://resume-roaster.vercel.app"
+    "NEXTAUTH_URL": "www.resume-roaster.xyz"
   },
   "functions": {
     "src/app/api/analyze-resume/route.ts": {
       "maxDuration": 60,
-      "memory": 1024
+      "memory": 512
     },
     "src/app/api/extract-pdf-ai/route.ts": {
       "maxDuration": 60,
-      "memory": 1024
+      "memory": 512
     },
     "src/app/api/extract-job-description/route.ts": {
-      "maxDuration": 45,
+      "maxDuration": 60,
       "memory": 512
     },
     "src/app/api/generate-optimized-resume/route.ts": {
-      "maxDuration": 45,
+      "maxDuration": 60,
       "memory": 512
     },
     "src/app/api/extract-resume-data/route.ts": {
-      "maxDuration": 45,
+      "maxDuration": 60,
       "memory": 512
     },
     "src/app/api/**/*.ts": {
-      "maxDuration": 30,
+      "maxDuration": 60,
       "memory": 512
     }
   },
