--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "env": {
-    "NEXTAUTH_URL": "www.resume-roaster.xyz"
+    "NEXTAUTH_URL": "https://resume-roaster.vercel.app"
   },
   "functions": {
     "src/app/api/analyze-resume/route.ts": {
