🎉 Introduce conversation management and Overleaf integration for resume optimization!
- Added a new `Conversation` model in the Prisma schema to manage user interactions and resume optimization sessions.
- Implemented API routes for creating and retrieving conversations, enhancing user experience in managing resume chats.
- Integrated Overleaf functionality to open LaTeX code directly in Overleaf, streamlining the resume editing process.
- Updated various components to support the new chat interface and Overleaf integration.

✅ These changes significantly enhance the resume optimization feature by providing a structured conversation flow and seamless LaTeX editing experience.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@anthropic-ai/sdk": "^0.52.0",
     "@auth/prisma-adapter": "^2.7.2",
     "@napi-rs/canvas": "^0.1.70",
+    "@openai/agents": "^0.0.3",
     "@pinecone-database/pinecone": "^6.0.1",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -85,7 +86,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "zod": "^3.25.28"
+    "zod": "^3.25.53"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
