--- a/pdf-converter-service/requirements.txt
+++ b/pdf-converter-service/requirements.txt
@@ -3,4 +3,8 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pdf2image==1.17.0
 Pillow==10.1.0
-python-magic==0.4.27 
+python-magic==0.4.27
+pydantic==2.5.0
+requests
+aiofiles==23.2.0
+aiohttp==3.9.1
